--- a/updatedmyjournal.html
+++ b/updatedmyjournal.html
@@ -20,10 +20,10 @@
 
       <div id="field">Welcome to my life. Please remove your shoes, and don't touch that. Here, have a seat. That seat. Please have that specific seat. Great. Just make yourself comfortable, and when will you be leaving?</div>
       <button id="random">I'm feeling lucky.</button>
-      <a href="" id="click2"></a>
+      
+      <a href="dashboard.html" id="click2"></a>
 
       <img class="pills" >
-      <h3>TURN YOUR PHONE SIDEWAYS</h3>
     </div>
 
 
