--- a/updatedmyjournal.html
+++ b/updatedmyjournal.html
@@ -21,7 +21,7 @@
       <div id="field">Welcome to my life. Please remove your shoes, and don't touch that. Here, have a seat. That seat. Please have that specific seat. Great. Just make yourself comfortable, and when will you be leaving?</div>
       <button id="random">I'm feeling lucky.</button>
       
-      <a href="dashboard.html" id="click2"></a>
+      <a href="" id="click2"></a>
 
       <img class="pills" >
     </div>
