--- a/dashboard.html
+++ b/dashboard.html
@@ -21,7 +21,7 @@
         <img id="cycleWide" class="horizontals fade" src="pictures/horizontals/frogs.jpg" loading="lazy">
 
         <h2> <a href="365partygirl.html">videos</a>
-          &nbsp;&nbsp;&nbsp;<a href="updatedmyjournal.html">journals</a>  </h2>
+          &nbsp;&nbsp;&nbsp;<a href="index.html">journals</a>  </h2>
           <audio controls>
             <source src="videos/the boatman's dance/audio.mp3" type="audio/mpeg"> 
                 </audio> 
