--- a/365partygirl.html
+++ b/365partygirl.html
@@ -22,7 +22,7 @@
           <a href="dashboard.html" id="click2"></a>
         </h7>
 
-        <h3>TURN YOUR PHONE SIDEWAYS</h3>
+        <h3>TURN YOUR PHONE SIDEWAYS, ZOOMER</h3>
         </div>
 
     </body>
