mobile friendly, looking good

--- a/365partygirl.html
+++ b/365partygirl.html
@@ -19,10 +19,8 @@
 
         <h7><a id="one">2016</a><a id="two"></a><a id="three"></a><br><a id="four"></a><a id="five">2020</a><br>
           <a id="six"></a><a id="seven"></a><a id="eight"></a><br><a id="nine">2024</a><a id="ten"></a>
-          <a href="dashboard.html" id="click2"></a>
+          <a href="index.html" id="click2"></a>
         </h7>
-
-        <h3>TURN YOUR PHONE SIDEWAYS, ZOOMER</h3>
         </div>
 
     </body>
