--- a/updatedmyjournal.html
+++ b/updatedmyjournal.html
@@ -21,7 +21,7 @@
       <div id="field">Welcome to my life. Please remove your shoes, and don't touch that. Here, have a seat. That seat. Please have that specific seat. Great. Just make yourself comfortable, and when will you be leaving?</div>
       <button id="random">I'm feeling lucky.</button>
       
-      <a href="" id="click2"></a>
+      <a href="index.html" id="click2"></a>
 
       <img class="pills" >
     </div>
@@ -69,7 +69,7 @@ const entries = [
   "The moldy, gray graves behind me. The clean, white cross ahead.\n\nMy life will be my life's work, from now on.",
   "I don't like confined spaces. So it's unlucky that I'm living out a life sentence inside my tiny skull.\n\nJesus, let me out of the cramped house of thought. The room, the closet, the shoebox, the shoe.",
   "I am avoiding my life like someone I don't want to talk to. Like a serious conversation I don't want to have.\n\nMy new to-do list: don't",
-  "I see you cooking in our kitchen, and the window is clouded over with steam. Your hair hangs around your ears; your eyelashes blink down at a recipe. It's like the past is being remembered in front of me, and the future foreseen.\n\nIt's like my whole life is converging here. In one moment, which cannot pass. Which will never be.",
+  "I see you cooking in our kitchen, and the window is clouded over with steam. Your hair hangs around your ears; your eyelashes blink down at a recipe.\n\nIt's like the past is being remembered in front of me, and the future foreseen.\n\nIt's like my whole life is converging here. In one moment, which cannot pass. Which will never be.",
   "I am moving through an infinite series of rooms. I experience life one frame at a time. I cut it as fine as garlic. My moment is smaller than anyone's.",
   "It's like I am carrying a small, very hot mug of coffee all the time, trying to keep it from spilling.\n\nIt's like I always have the kettle on in the other room.", 
   "Providence, RI\n\nYou put your old toys back in their box and fold your first attempts away\n\nat molding up a dream of yours from the world's inadequate clay.",
