more or less done now

--- a/365partygirl.html
+++ b/365partygirl.html
@@ -11,7 +11,7 @@
     <body>
         <div class="splash">
             <img src="pictures/loading/fisheeyetwo.jpg">
-            <h1>(this leaves your past unchagned)</h1>
+            <h1>(this leaves your past unchanged)</h1>
         </div>
 
       <div class="theater">
@@ -19,7 +19,7 @@
 
         <h7><a id="one">2016</a><a id="two"></a><a id="three"></a><br><a id="four"></a><a id="five">2020</a><br>
           <a id="six"></a><a id="seven"></a><a id="eight"></a><br><a id="nine">2024</a><a id="ten"></a>
-          <a href="index.html" id="click2"></a>
+          <a href="dashboard.html" id="click2"></a>
         </h7>
         </div>
 
