--- a/dashboard.html
+++ b/dashboard.html
@@ -9,7 +9,7 @@
         <link rel="icon" href="pictures/loading/cove.ico" type="image/x-icon">
     </head>
 
-    <body>
+    <body class="all">
         <div class="splash">
             <img src="pictures/loading/fisheyeone.jpg">
             <h1>(this changes your future)</h1>
@@ -20,13 +20,12 @@
         <img id="cycleCenter" class="people fade" src="pictures/people/monk.jpg" loading="lazy">
         <img id="cycleWide" class="horizontals fade" src="pictures/horizontals/frogs.jpg" loading="lazy">
 
-        <h2> <a href="365partygirl.html">videos</a>
-          &nbsp;&nbsp;&nbsp;<a href="index.html">journals</a>  </h2>
-          <audio controls>
+        <audio controls>
             <source src="videos/the boatman's dance/audio.mp3" type="audio/mpeg"> 
-                </audio> 
-
-        <h3>TURN YOUR PHONE SIDEWAYS</h3>
+                </audio>
+                
+                <h2><a class="reload" href="">🔁</a>&nbsp;&nbsp;&nbsp; <a href="365partygirl.html">videos</a>
+          &nbsp;&nbsp;&nbsp;<a href="updatedmyjournal.html">journals</a></h2>
         </div>
 
     </body>
@@ -75,7 +74,8 @@ randomImage(centerElement, centerImages);
 let wideImages =  ["pictures/horizontals/frogs.jpg", "pictures/horizontals/scrape.jpg", "pictures/horizontals/dryingrack.jpg", 
 "pictures/horizontals/bookshelves.jpeg", "pictures/horizontals/seafloxfront.jpg", "pictures/30more/horizontals/anniversary.jpg", 
 "pictures/30more/horizontals/onedirection.jpeg", "pictures/30more/horizontals/sandals.jpeg", "pictures/horizontals/produce.jpg", 
-"pictures/scenes/bottleredemption.jpg"]
+"pictures/scenes/bottleredemption.jpg", "pictures/horizontals/vessel.jpg", "pictures/horizontals/office.jpg",
+"pictures/30more/horizontals/sleepingagain.jpeg"]
 // 10
 
 const wideElement = document.getElementById("cycleWide")
