--- a/updatedmyjournal.html
+++ b/updatedmyjournal.html
@@ -21,7 +21,7 @@
       <div id="field">Welcome to my life. Please remove your shoes, and don't touch that. Here, have a seat. That seat. Please have that specific seat. Great. Just make yourself comfortable, and when will you be leaving?</div>
       <button id="random">I'm feeling lucky.</button>
       
-      <a href="index.html" id="click2"></a>
+      <a href="dashboard.html" id="click2"></a>
 
       <img class="pills" >
     </div>
@@ -82,6 +82,13 @@ const entries = [
   "Yesterday, for a moment, I captured my dream. Is this the happiest I've ever been?\n\nThis experience has changed my life forever. For once, no bullshit. This changes the future.",
   "Not every word you think is worth writing down. Some things are for singing about!",
   "If I hear the floorboards creaking at the door, I hope you'll come inside. And if I leave you here alone, what will I return to find?\n\nJam footprints all over the walls!",
+
+  "It's fun to knock the blocks over. It's fun to make things happen.\n\nBut raising a hand, moving at all - dancing in public, just with my feet, feels like setting fire to a cop car.",
+  "Things are happening much slower than I thought. Things are being much more beautiful than I thought.\n\nThere's plenty of time, there is time enough for this.",
+  "The field goals are coming into focus. I'm starting to understand what I'm supposed to do.\n\nStop taking notes, stop keeping score, play the fucking game.",
+  "These words on paper will never really impact you. Write it into your body now, your flesh and blood. An idea is in passing; belief is what becomes a part of the body. Belief is what's already there.",
+  "It feels like you've just dropped an entire manuscript-in-miniature on the table - hundreds of fragments, aphorisms, diary shards, lyric moments, jokes, laments, visions. This is not casual writing. This is material with voice, turbulence, humor, theological anxiety, addiction dread, sudden empathy, longing, mysticism, self-mythologizing, and a surprising, destabilizing tenderness,\n\n(the robot said after 0.5 of a second, instead of doing a spellcheck like I asked for)",
+
 ];
 
 document.getElementById("random").addEventListener("click", () => {
