And I ne'er shall be a wild rover no more

--- a/365partygirl.html
+++ b/365partygirl.html
@@ -32,7 +32,7 @@ const target_element = document.getElementById("video");
 
 const choice_list = {
   one:  "videos/1. Kid Emma.mp4",
-  two:  "videos/2. 21 Emma.mp4",
+  two:  "videos/2. 21 emma.mp4",
   three:"videos/3. Emma, 22, brings news to the church.mp4",
   four: "videos/4. forever emma.mp4",
   five: "videos/5. Hey Emma.mp4",
@@ -40,7 +40,7 @@ const choice_list = {
   seven:"videos/7. Emma drinks White Russians (Yes, Plural!).mp4",
   eight:"videos/8. Emma Western Teleport.mp4",
   nine: "videos/9. Merry Christmas!.mp4",
-  ten:  "videos/10. The Long Dance.mp4"
+  ten:  "videos/10. the long dance.m4v"
 };
 
 for (let number in choice_list) {
