--- a/dashboard.html
+++ b/dashboard.html
@@ -31,6 +31,7 @@
     </body>
 </html>
 
+<!-- RANDOM IMAGE -->
 <script>
   function cycleImage(imgElement, imageList) {
   imgElement.addEventListener("click", () => {
@@ -58,7 +59,7 @@ cycleImage(leftElement, leftImages);
 randomImage(leftElement, leftImages);
 
 const centerImages = ["pictures/people/pier76.jpeg", "pictures/scenes/seafloxback.jpg", "pictures/scenes/basil.jpg", "pictures/people/noodlesselfie.jpg", 
-"pictures/scenes/sticker.jpg", "pictures/scenes/thecove.jpg", "pictures/people/luigi.jpg", "pictures/30more/tryonpark.jpg",
+"pictures/scenes/sticker.jpg", "pictures/scenes/thecove.jpg", "pictures/people/luigi.jpg", "pictures/30more/tryonpark.jpg", "pictures/people/babyspew.png",
 "pictures/scenes/flower.jpg", "pictures/people/gabopentin.jpg", "pictures/scenes/pasta.jpg", "pictures/30more/horizontals/photobooth.jpeg",
 "pictures/people/radiocitymusichall.jpg", "pictures/people/redpipe.jpg", "pictures/scenes/whiskeydamage.jpg", "pictures/people/rowley.jpg", 
 "pictures/30more/luigitwo.jpg", "pictures/30more/deer.jpg", "pictures/people/scorpionbowl.jpeg", "pictures/people/raincoat.jpeg",
