--- a/updatedmyjournal.html
+++ b/updatedmyjournal.html
@@ -33,7 +33,7 @@
 <script>
 const entries = [
   "The seaweed lies like the backs of weeping women's heads, and I'm standing with nature in her new shoes. We cross the suction of the cold, damp sand and laugh at something I forget. I kiss a parting in her hair, ask for her trust back.\n\nNow nature shows me what she's painted, draws her tarot, changes clothes. Now nature goes to bed, and has a dream she will tell me all about tomorrow.",
-  "And when I play a song, unconsciously I hope she's listening. And when I write, I hope she'll peek. Not even knowing my own hope until I hear her coming nearer.",
+  "And when I play a song, unconsciously I hope she's listening. And when I write, I hope she'll look over my shoulder. Not even knowing my own hope until I hear her coming nearer.",
   "You set a timer for a photo and come running to be in it. Everything seems especially brief and delicate today, like we are on the brink of significant change.\n\nI feel compassion for you. I feel compassion for the uncrushed moss and weightless morning. Your fuzzy ear this afternoon, the darkening cove. I am alive for a reason. I was given this life to take care of.",
   "The binding of my journal is coming loose and everything I love is blowing away.\n\nShe's standing barefoot in front of the garage with her clipping of a flower, and this too I cannot keep. I am already forgetting.\n\nI start to cry if I sing about love.",
   "It might still be. The secret hope you cherish might still be.",
@@ -57,7 +57,7 @@ const entries = [
   "blank mind\n\n\nthe dogwood petals are falling down.\n\nblank mind\n\n\nthe dogwood petals are falling.",
   "She formed one morning like a dewdrop on life's leaf. She shows the sky a tiny sky.\n\nMy don't-leave, my please-be-mine.",
   "Hidden in the breath you are breathing. Hidden in the twitch of your pulse. Hidden in the thumbprint on the screen: it's your life.",
-  "What did the bored aeronautical engineering student shout out during the lecture?\n\nboieng!",
+  "What did the bored aeronautical engineering student shout out during the lecture?\n\nbo-ieng!",
   "Maybe you'll like this. I heard it on the radio yesterday: ''I hate having insomnia, but there is an upside... only three more sleeps until Christmas!''\n\nIf you're laughing, I wish I could hear it. Until then.",
   "I'm here now. I hear the mourning dove mourning. The poppies are alarmingly red.\n\nIt's almost embarrassing how nakedly the morning lounges across the grass.\n\nBut where did that hummingbird go? Already, it's disappearing into memory.",
   "Under the churchroof of the branches and rain. Crawled on by green insects, half conscious.\n\nI am in progress, I am not over. I am a continuing story.",
@@ -83,11 +83,10 @@ const entries = [
   "Not every word you think is worth writing down. Some things are for singing about!",
   "If I hear the floorboards creaking at the door, I hope you'll come inside. And if I leave you here alone, what will I return to find?\n\nJam footprints all over the walls!",
 
-  "It's fun to knock the blocks over. It's fun to make things happen.\n\nBut raising a hand, moving at all - dancing in public, just with my feet, feels like setting fire to a cop car.",
+  "It's fun to knock the blocks over. It's fun to make things actually happen.\n\nBut raising a hand, moving at all - dancing in public, just with my feet, feels like setting fire to a cop car.",
   "Things are happening much slower than I thought. Things are being much more beautiful than I thought.\n\nThere's plenty of time, there is time enough for this.",
-  "The field goals are coming into focus. I'm starting to understand what I'm supposed to do.\n\nStop taking notes, stop keeping score, play the fucking game.",
-  "These words on paper will never really impact you. Write it into your body now, your flesh and blood. An idea is in passing; belief is what becomes a part of the body. Belief is what's already there.",
-  "It feels like you've just dropped an entire manuscript-in-miniature on the table - hundreds of fragments, aphorisms, diary shards, lyric moments, jokes, laments, visions. This is not casual writing. This is material with voice, turbulence, humor, theological anxiety, addiction dread, sudden empathy, longing, mysticism, self-mythologizing, and a surprising, destabilizing tenderness,\n\n(the robot said after 0.5 of a second, instead of doing a spellcheck like I asked for)",
+  "These words on paper will never really impact you. Write it into your body now, your flesh and blood.\n\nAn idea is in passing, but BELIEF is a part of the body. Belief is what's already there.",
+  "''It feels like you've just dropped an entire manuscript-in-miniature on the table - hundreds of diary shards, lyric moments, jokes, laments. This is not casual writing. This is material with voice, turbulence, humor, theological anxiety, sudden empathy, longing, mysticism, self-mythologizing, and a surprising, destabilizing tenderness.''\n\n(it said after 0.5 of a second, instead of doing a spellcheck)",
 
 ];
 
